hop-ilp/src/parser/spuddParser.py
# Generated from /Users/ndt/Development/fyp/hop-ilp/res/spudd.g4 by ANTLR 4.5.3
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class spuddParser ( Parser ):

    grammarFileName = "spudd.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'init'", u"'[*'", u"']'", u"'(variables'", 
                     u"')'", u"'('", u"'action'", u"'endaction'", u"'cost'", 
                     u"'[+'", u"'reward'", u"'discount'", u"'horizon'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"ID", u"INT", u"FLOAT", 
                      u"WS", u"COMMENT" ]

    RULE_init = 0
    RULE_initBlock = 1
    RULE_variablesBlock = 2
    RULE_variable = 3
    RULE_actionBlock = 4
    RULE_costBlock = 5
    RULE_config = 6
    RULE_rewardBlock = 7
    RULE_discount = 8
    RULE_horizon = 9
    RULE_ttree = 10
    RULE_dtree = 11
    RULE_node = 12
    RULE_number = 13

    ruleNames =  [ u"init", u"initBlock", u"variablesBlock", u"variable", 
                   u"actionBlock", u"costBlock", u"config", u"rewardBlock", 
                   u"discount", u"horizon", u"ttree", u"dtree", u"node", 
                   u"number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    ID=14
    INT=15
    FLOAT=16
    WS=17
    COMMENT=18

    def __init__(self, input):
        super(spuddParser, self).__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class InitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.InitContext, self).__init__(parent, invokingState)
            self.parser = parser

        def variablesBlock(self):
            return self.getTypedRuleContext(spuddParser.VariablesBlockContext,0)


        def initBlock(self):
            return self.getTypedRuleContext(spuddParser.InitBlockContext,0)


        def actionBlock(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(spuddParser.ActionBlockContext)
            else:
                return self.getTypedRuleContext(spuddParser.ActionBlockContext,i)


        def config(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(spuddParser.ConfigContext)
            else:
                return self.getTypedRuleContext(spuddParser.ConfigContext,i)


        def getRuleIndex(self):
            return spuddParser.RULE_init

        def accept(self, visitor):
            if hasattr(visitor, "visitInit"):
                return visitor.visitInit(self)
            else:
                return visitor.visitChildren(self)




    def init(self):

        localctx = spuddParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.variablesBlock()
            self.state = 30
            _la = self._input.LA(1)
            if _la==spuddParser.T__0:
                self.state = 29
                self.initBlock()


            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.actionBlock()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==spuddParser.T__6):
                    break

            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 37
                self.config()
                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << spuddParser.T__10) | (1 << spuddParser.T__11) | (1 << spuddParser.T__12))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.InitBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def dtree(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(spuddParser.DtreeContext)
            else:
                return self.getTypedRuleContext(spuddParser.DtreeContext,i)


        def getRuleIndex(self):
            return spuddParser.RULE_initBlock

        def accept(self, visitor):
            if hasattr(visitor, "visitInitBlock"):
                return visitor.visitInitBlock(self)
            else:
                return visitor.visitChildren(self)




    def initBlock(self):

        localctx = spuddParser.InitBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_initBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(spuddParser.T__0)
            self.state = 43
            self.match(spuddParser.T__1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.dtree()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==spuddParser.T__5):
                    break

            self.state = 49
            self.match(spuddParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariablesBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.VariablesBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(spuddParser.VariableContext)
            else:
                return self.getTypedRuleContext(spuddParser.VariableContext,i)


        def getRuleIndex(self):
            return spuddParser.RULE_variablesBlock

        def accept(self, visitor):
            if hasattr(visitor, "visitVariablesBlock"):
                return visitor.visitVariablesBlock(self)
            else:
                return visitor.visitChildren(self)




    def variablesBlock(self):

        localctx = spuddParser.VariablesBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variablesBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(spuddParser.T__3)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.variable()
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==spuddParser.T__5):
                    break

            self.state = 57
            self.match(spuddParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.VariableContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(spuddParser.ID, 0)

        def node(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(spuddParser.NodeContext)
            else:
                return self.getTypedRuleContext(spuddParser.NodeContext,i)


        def getRuleIndex(self):
            return spuddParser.RULE_variable

        def accept(self, visitor):
            if hasattr(visitor, "visitVariable"):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = spuddParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(spuddParser.T__5)
            self.state = 60
            self.match(spuddParser.ID)
            self.state = 62 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                self.node()
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << spuddParser.ID) | (1 << spuddParser.INT) | (1 << spuddParser.FLOAT))) != 0)):
                    break

            self.state = 66
            self.match(spuddParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.ActionBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(spuddParser.ID, 0)

        def costBlock(self):
            return self.getTypedRuleContext(spuddParser.CostBlockContext,0)


        def ttree(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(spuddParser.TtreeContext)
            else:
                return self.getTypedRuleContext(spuddParser.TtreeContext,i)


        def getRuleIndex(self):
            return spuddParser.RULE_actionBlock

        def accept(self, visitor):
            if hasattr(visitor, "visitActionBlock"):
                return visitor.visitActionBlock(self)
            else:
                return visitor.visitChildren(self)




    def actionBlock(self):

        localctx = spuddParser.ActionBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_actionBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(spuddParser.T__6)
            self.state = 69
            self.match(spuddParser.ID)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.ttree()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==spuddParser.ID):
                    break

            self.state = 75
            self.costBlock()
            self.state = 76
            self.match(spuddParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CostBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.CostBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def dtree(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(spuddParser.DtreeContext)
            else:
                return self.getTypedRuleContext(spuddParser.DtreeContext,i)


        def getRuleIndex(self):
            return spuddParser.RULE_costBlock

        def accept(self, visitor):
            if hasattr(visitor, "visitCostBlock"):
                return visitor.visitCostBlock(self)
            else:
                return visitor.visitChildren(self)




    def costBlock(self):

        localctx = spuddParser.CostBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_costBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(spuddParser.T__8)
            self.state = 79
            self.match(spuddParser.T__9)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.dtree()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==spuddParser.T__5):
                    break

            self.state = 85
            self.match(spuddParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConfigContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.ConfigContext, self).__init__(parent, invokingState)
            self.parser = parser

        def rewardBlock(self):
            return self.getTypedRuleContext(spuddParser.RewardBlockContext,0)


        def discount(self):
            return self.getTypedRuleContext(spuddParser.DiscountContext,0)


        def horizon(self):
            return self.getTypedRuleContext(spuddParser.HorizonContext,0)


        def getRuleIndex(self):
            return spuddParser.RULE_config

        def accept(self, visitor):
            if hasattr(visitor, "visitConfig"):
                return visitor.visitConfig(self)
            else:
                return visitor.visitChildren(self)




    def config(self):

        localctx = spuddParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_config)
        try:
            self.state = 90
            token = self._input.LA(1)
            if token in [spuddParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.rewardBlock()

            elif token in [spuddParser.T__11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.discount()

            elif token in [spuddParser.T__12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.horizon()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RewardBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.RewardBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def dtree(self):
            return self.getTypedRuleContext(spuddParser.DtreeContext,0)


        def getRuleIndex(self):
            return spuddParser.RULE_rewardBlock

        def accept(self, visitor):
            if hasattr(visitor, "visitRewardBlock"):
                return visitor.visitRewardBlock(self)
            else:
                return visitor.visitChildren(self)




    def rewardBlock(self):

        localctx = spuddParser.RewardBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rewardBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(spuddParser.T__10)
            self.state = 93
            self.dtree()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DiscountContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.DiscountContext, self).__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(spuddParser.NumberContext,0)


        def getRuleIndex(self):
            return spuddParser.RULE_discount

        def accept(self, visitor):
            if hasattr(visitor, "visitDiscount"):
                return visitor.visitDiscount(self)
            else:
                return visitor.visitChildren(self)




    def discount(self):

        localctx = spuddParser.DiscountContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_discount)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(spuddParser.T__11)
            self.state = 96
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HorizonContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.HorizonContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.val = None # NumberContext

        def number(self):
            return self.getTypedRuleContext(spuddParser.NumberContext,0)


        def getRuleIndex(self):
            return spuddParser.RULE_horizon

        def accept(self, visitor):
            if hasattr(visitor, "visitHorizon"):
                return visitor.visitHorizon(self)
            else:
                return visitor.visitChildren(self)




    def horizon(self):

        localctx = spuddParser.HorizonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_horizon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(spuddParser.T__12)
            self.state = 99
            localctx.val = self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TtreeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.TtreeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(spuddParser.ID, 0)

        def dtree(self):
            return self.getTypedRuleContext(spuddParser.DtreeContext,0)


        def getRuleIndex(self):
            return spuddParser.RULE_ttree

        def accept(self, visitor):
            if hasattr(visitor, "visitTtree"):
                return visitor.visitTtree(self)
            else:
                return visitor.visitChildren(self)




    def ttree(self):

        localctx = spuddParser.TtreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ttree)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(spuddParser.ID)
            self.state = 102
            self.dtree()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DtreeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.DtreeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.left = None # DtreeContext
            self.right = None # DtreeContext

        def node(self):
            return self.getTypedRuleContext(spuddParser.NodeContext,0)


        def dtree(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(spuddParser.DtreeContext)
            else:
                return self.getTypedRuleContext(spuddParser.DtreeContext,i)


        def getRuleIndex(self):
            return spuddParser.RULE_dtree

        def accept(self, visitor):
            if hasattr(visitor, "visitDtree"):
                return visitor.visitDtree(self)
            else:
                return visitor.visitChildren(self)




    def dtree(self):

        localctx = spuddParser.DtreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dtree)
        try:
            self.state = 119
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(spuddParser.T__5)
                self.state = 105
                self.node()
                self.state = 106
                self.match(spuddParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(spuddParser.T__5)
                self.state = 109
                self.node()
                self.state = 110
                localctx.left = self.dtree()
                self.state = 111
                self.match(spuddParser.T__4)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(spuddParser.T__5)
                self.state = 114
                self.node()
                self.state = 115
                localctx.left = self.dtree()
                self.state = 116
                localctx.right = self.dtree()
                self.state = 117
                self.match(spuddParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NodeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.NodeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(spuddParser.ID, 0)

        def number(self):
            return self.getTypedRuleContext(spuddParser.NumberContext,0)


        def getRuleIndex(self):
            return spuddParser.RULE_node

        def accept(self, visitor):
            if hasattr(visitor, "visitNode"):
                return visitor.visitNode(self)
            else:
                return visitor.visitChildren(self)




    def node(self):

        localctx = spuddParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_node)
        try:
            self.state = 123
            token = self._input.LA(1)
            if token in [spuddParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(spuddParser.ID)

            elif token in [spuddParser.INT, spuddParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.number()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(spuddParser.NumberContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(spuddParser.INT, 0)

        def FLOAT(self):
            return self.getToken(spuddParser.FLOAT, 0)

        def getRuleIndex(self):
            return spuddParser.RULE_number

        def accept(self, visitor):
            if hasattr(visitor, "visitNumber"):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = spuddParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not(_la==spuddParser.INT or _la==spuddParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





